
  o Minor features (directory voting):
    - Store v3 consensus status consensuses on disk, and reload them
      on startup.

  o Minor features (security):
    - Warn about unsafe ControlPort configurations.

  o Minor bugfixes (directory voting):
    - Read v3 keys from the right location.
    - Numerous bugfixes to directory voting code.

Changes in version 0.2.0.4-alpha - 2007-08-01
  o Major security fixes:
    - Close immediately after missing authentication on control port;
      do not allow multiple authentication attempts.

  o Major bugfixes (compilation):
    - Fix win32 compilation: apparently IN_ADDR and IN6_ADDR are already
      defined there.

  o Minor features (performance):
    - Be even more aggressive about releasing RAM from small
      empty buffers. Thanks to our free-list code, this shouldn't be too
      performance-intensive.
    - Disable sentinel-based debugging for buffer code: we squashed all
      the bugs that this was supposed to detect a long time ago, and
      now its only effect is to change our buffer sizes from nice
      powers of two (which platform mallocs tend to like) to values
      siightly over powers of two (which make some platform mallocs sad).
    - Log malloc statistics from mallinfo() on platforms where it
      exists.


Changes in version 0.2.0.3-alpha - 2007-07-29
  o Major features:
    - The first pieces of our "bridge" design for blocking-resistance
      are implemented. People can run bridge directory authorities;
      people can run bridges; and people can configure their Tor clients
      with a set of bridges to use as the first hop into the Tor network.
      See http://archives.seul.org/or/talk/Jul-2007/msg00249.html for
      details.
    - Create listener connections before we setuid to the configured
      User and Group. Now non-Windows users can choose port values
      under 1024, start Tor as root, and have Tor bind those ports