@@ -26,6 +26,14 @@ Changes in version 0.2.0.5-alpha - 2007-??-??
     - Read v3 keys from the right location.
     - Numerous bugfixes to directory voting code.
 
+  o Minor bugfixes (other):
+    - If we require CookieAuthentication but we fail to write the
+      cookie file, we would warn but not exit, and end up in a state
+      where no controller could authenticate. Now we exit.
+    - If we require CookieAuthentication, stop generating a new cookie
+      every time we change any piece of our config.
+
+
 Changes in version 0.2.0.4-alpha - 2007-08-01
   o Major security fixes:
     - Close immediately after missing authentication on control port;
